creacion de servicios

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,1 +1,11 @@
-<p>cards works!</p>
+<section class="cards">
+    <div  *ngFor="let item of cards" class="cards__content">
+        <div class="cards__content-text">
+            <p class="cards__content-text-title">{{item.title}}</p>
+            <p class="cards__content-text-number">{{item.number}}</p>    
+        </div>
+        <div class="cards__content-icon">
+            <img src="assets/icons/{{item.icon}}" alt="{{item.name}}" class="cards__content-icon-img">
+        </div>
+    </div>
+</section>
