--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,1 +1,7 @@
-<p>dashboard works!</p>
+<div class="app">
+    <app-header></app-header>
+    <app-cards></app-cards>
+    <app-table class="app__table">
+    </app-table>
+    <app-footer></app-footer>
+</div>
