maquetado de card sensors y conneccion de servicios

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -6,18 +6,18 @@
   
         <div class="footer__content-left-icons">
             <div class="footer__content-left-icons-center">
-              <img src="assets/icons/{{item.icon}}.png" alt="{{item.name}}" class="footer__content-left-icons-center-img">
-              <p class="footer__content-left-icons-center-number">{{item.iconNumber}}</p>
+              <img src="assets/icons/iconReading.png" alt="reading" class="footer__content-left-icons-center-img">
+              <p class="footer__content-left-icons-center-number">{{item.numberReading}}</p>
             </div>
   
             <div class="footer__content-left-icons-center">
-              <img src="assets/icons/{{item.icon}}.png" alt="{{item.name}}" class="footer__content-left-icons-center-img">
-              <p class="footer__content-left-icons-center-number">{{item.iconNumber}}</p>
+              <img src="assets/icons/midLevelAlerts.png" alt="{{item.name}}" class="footer__content-left-icons-center-img">
+              <p class="footer__content-left-icons-center-number">{{item.numberMid}}</p>
             </div>
   
             <div class="footer__content-left-icons-center">
-              <img src="assets/icons/{{item.icon}}.png" alt="{{item.name}}" class="footer__content-left-icons-center-img">
-              <p class="footer__content-left-icons-center-number">{{item.iconNumber}}</p>
+              <img src="assets/icons/redAlerts.png" alt="{{item.name}}" class="footer__content-left-icons-center-img">
+              <p class="footer__content-left-icons-center-number">{{item.numberRedAlert}}</p>
             </div>
         </div>
   
