--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -6,19 +6,18 @@
     height: 100vh;
     background-color: $color-login;
     &__left {
-        width: 65%;
-        height: 100%;
+        flex: 1 1 55%;
         display: flex;
-        flex-direction: column;
         justify-content: center;
+        flex-direction: column;
         align-items: flex-start;
         align-content: center;
         flex-wrap: wrap;
         gap: 30px;
         &-title {
             color: $color-primary;
-            font-size: 36px;
-            font-weight: 500;
+            font-size: 48px;
+            font-weight: 600;
         }
         &-text {
             color: $color-primary;
@@ -50,8 +49,7 @@
     }
     &__right {
         background-color: $color-primary;
-        width: 45%;
-        height: 100%;
+        flex: 1 1 45%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -67,6 +65,7 @@
             display: flex;
             flex-direction: column;
             width: 457px;
+            height: 100%;
             align-items: stretch;
             justify-content: center;
             align-content: center;
@@ -75,7 +74,6 @@
         }
         &-title {
             font-size: 36px;
-            font-weight: 500;
             font-weight: 600;
             font-family: 'Inter', sans-serif;
         }
@@ -160,7 +158,14 @@
       }
   
       &__right {
-        width: 100%;
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        align-items: center;
+        &-content {
+            flex: 1 1 100%;
+            border-radius: 0;
+        }
       }
     }
   }
