creando componete register

--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -58,6 +58,10 @@
             class="login__right-footer-text-color">Política de Privacidad</samp> y <samp
             class="login__right-footer-text-color">Condiciones.</samp></p>
       </div>
+
+      <div class="login__right-footer-register">
+        <button class="login__right-footer-register-title" (click)="onIconClick()">Registrarse</button>
+    </div>
     </div>
   </div>
 
