--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -134,6 +134,26 @@
                     font-weight: 500;
                 }
             }
+            &-register{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                width: 100%;
+                margin-top: 25px;
+                &-title{
+                    background-color: #ffffff;
+                    width: 40%;
+                    height: 30px;
+                    color: rgb(53, 58, 96);
+                    border: none;
+                    font-size: 14px;
+                    font-family: sans-serif;
+                    font-weight: 600;
+                    border-radius: 22px;
+                    cursor: pointer;
+                }
+            }
         }
     }
 }
