creando vista responsive para login

--- a/src/app/components/table/table.component.html
+++ b/src/app/components/table/table.component.html
@@ -49,8 +49,9 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns" class="table__body-matTable-columns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns" class="table__body-matTable-columns-center"></tr>
           </table>
-          
     </div>
+
+    <!-- <app-add-users (update)="update()"></app-add-users> -->
 
 </section>
 
