--- a/src/app/views/register/register.component.scss
+++ b/src/app/views/register/register.component.scss
@@ -1,6 +1,6 @@
 @import "src/variables.scss";
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
-.login {
+.register {
     display: flex;
     width: 100%;
     height: 100vh;
@@ -23,10 +23,6 @@
             color: $color-primary;
             width: 400px;
             line-height: 25px;
-            &-subContent {
-                font-size: 12px;
-                color: $color-primary;
-            }
             &-content {
                 font-size: 14px;
                 color: $color-primary;
@@ -42,6 +38,10 @@
             }
             &-text {
                 &-content {
+                    color: $color-primary;
+                }
+                &-subContent {
+                    font-size: 12px;
                     color: $color-primary;
                 }
             }
@@ -134,6 +134,24 @@
                     font-weight: 500;
                 }
             }
+            &-register{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                width: 100%;
+                margin-top: 25px;
+                &-title{
+                    background-color: #ffffff;
+                    width: 40%;
+                    height: 30px;
+                    color: rgb(53, 58, 96);
+                    border: none;
+                    font-size: 14px;
+                    font-family: sans-serif;
+                    font-weight: 600;
+                    border-radius: 22px;
+                    cursor: pointer;
         }
     }
 }
@@ -152,7 +170,7 @@
   }
 
   @media (max-width: 720px) {
-    .login {
+    .register {
       &__left {
         display: none;
       }
@@ -169,5 +187,5 @@
       }
     }
   }
-  
-
+ }
+}
