--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -65,7 +65,6 @@
             display: flex;
             flex-direction: column;
             width: 457px;
-            height: 100%;
             align-items: stretch;
             justify-content: center;
             align-content: center;
@@ -171,7 +170,7 @@
     background-color: $color-primary !important;
   }
 
-  @media (max-width: 720px) {
+  @media (max-width: 600px) {
     .login {
       &__left {
         display: none;
@@ -182,7 +181,6 @@
         flex-direction: column;
         gap: .5rem;
         align-items: center;
-        padding: 0 2rem;
         &-content {
             flex: 1 1 100%;
             border-radius: 0;
@@ -212,3 +210,16 @@
       }
     }
   }
+
+  @media screen and (max-width: 922px){
+    .login{
+        &__left{
+            display: none;
+        }
+        &__right {
+            flex: 1 1 100%;
+            border-radius: 0;
+        }
+    }
+  }
+
