--- a/src/app/views/register/register.component.scss
+++ b/src/app/views/register/register.component.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 .register {
     display: flex;
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     background-color: $color-login;
     &__left {
@@ -188,4 +188,55 @@
     }
   }
  }
+}
+
+@media (max-width: 600px) {
+    .register {
+      &__left {
+        display: none;
+      }
+  
+      &__right {
+        display: flex;
+        flex-direction: column;
+        gap: .5rem;
+        align-items: center;
+        &-content {
+            flex: 1 1 100%;
+            border-radius: 0;
+            flex-direction: row
+        }
+        &-title {
+            display: none;
+        }
+        &-form {
+            &-button {
+                &-star {
+                    width: 353px;
+                    height: 52px;
+                }
+                &-text {
+                    display: none;
+                }
+            }
+        }
+        &-footer {
+            &-text {
+                display: none;
+            }
+        }
+      }
+    }
+  }
+
+  @media screen and (max-width: 922px){
+    .register{
+        &__left{
+            display: none;
+        }
+        &__right {
+            flex: 1 1 100%;
+            border-radius: 0;
+        }
+    }
 }
